Generate Query API by OpenAPI
