# command-api/src/main/resources/openapi/command-api-v1.yml
@@ -7,7 +7,7 @@ tags:
   - name: command
     description: Command API
 paths:
-  /api/v1/commands/accounts:
+  /command-api/v1/commands/accounts:
     post:
       tags:
         - command
@@ -26,7 +26,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CommandResponse'
-  /api/v1/commands/deposit:
+
+  /command-api/v1/commands/deposit:
     post:
       tags:
         - command
@@ -45,7 +46,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CommandResponse'
-  /api/v1/commands/withdraw:
+
+  /command-api/v1/commands/withdraw:
     post:
       tags:
         - command
@@ -64,7 +66,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CommandResponse'
-  /api/v1/commands/transfer:
+
+  /command-api/v1/commands/transfer:
     post:
       tags:
         - command
